--- a/home.css
+++ b/home.css
@@ -13,6 +13,7 @@ div#interface {
 .menu{
     text-transform: uppercase;
     text-align: center; 
+    height: -20px;
 }
 
 .menu ul li{
@@ -23,7 +24,6 @@ div#interface {
 .menu a {
     color:black;
     text-decoration: none;
-    height: 50px;
 }
 
 .menu a:hover {
@@ -41,4 +41,16 @@ header#cabeçalho h1{
     text-align: center;
     color: black;
 }
+
+div#corpo {
+    text-align: justify;
+    font-size: 20px;
+    width: 900px;
+}
+footer {
+    background-image: url("_img/design.jpg");
+    box-shadow: 0px 0px 10px black;
+}
+
+
 
