--- a/home.css
+++ b/home.css
@@ -1,13 +1,17 @@
 @charset "UTF-8";
 
 body {
-    background-image: url("folinha.jpg");
+        background-image: url("lindo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     color:black;
 }
 
 div#interface {
-    box-shadow: 0px 0px 10px black;
+    box-shadow: 0px 0px 5px black;
     padding:-10px;
+    background-color:rgb(61, 110, 103);
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .menu{
@@ -17,7 +21,7 @@ div#interface {
 }
 
 .menu ul li{
-    padding: 30px;
+    padding: 20px;
     display:inline;
 }
 
@@ -43,14 +47,16 @@ header#cabeçalho h1{
 }
 
 div#corpo {
-    text-align: justify;
+    text-align:justify;
     font-size: 20px;
-    width: 900px;
-}
-footer {
-    background-image: url("_img/design.jpg");
-    box-shadow: 0px 0px 10px black;
+    width: 1225px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
+.footer {
+    background-color: rgb(61, 110, 103);
+    box-shadow: 0px 0px 10px black;
+    font-family: 'Times New Roman', Times, serif;
+}
 
 
